--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 
 # Ignore all the .DS_Store files
 .DS_Store
+
+# Ignore byebug history files
+.byebug_history
+
+# Ignore all logfiles
+/log/*.log
